[gd_scene load_steps=2 format=2]

[ext_resource path="res://BaseRoom.gd" type="Script" id=1]

[node name="BaseRoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LblTitle" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "Base Room"
align = 1

[node name="LblID" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "ID"
align = 2

[node name="OutputLog" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0

[node name="ColorRect" type="ColorRect" parent="OutputLog"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.164706 )

[node name="BtnBack" type="Button" parent="."]
margin_right = 60.0
margin_bottom = 40.0
text = "Back"

[node name="BtnSayHi" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
text = "say hi"

[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="BtnSayHi" to="." method="_on_BtnSayHi_pressed"]
